admbsecr 0.1.5
--------------

* Added the argument sound.speed to admbsecr().

admbsecr 0.1.4
--------------

* Added further methods to contours() function. It now works with
  the "dist" and "mrds" methods.

* When contours() is used on a fit of method "ang", arrows are plotted
  from the traps, indicating the estimated bearing of the animal.

* The labels on contour plots now correspond to the estimated
  probability of the individual being located within the contour,
  rather than probability density.

* The user can specify the (approximate) probability values at which
  contours will be drawn.

* A new argument ('detfn') has been added to admbsecr(), allowing the
  user to choose a detection function. Options are "hn" (halfnormal),
  "hr" (hazard rate), "th" (threshold), and "logth" (log-link
  threshold).

* The signal strength method now allows a log link function for
  expected received signal strength. This is done from a call to
  admbsecr using the arguments 'method = "ss", detfn = "log"'.

admbsecr 0.1.3
--------------

* Added functions mrdstrapcov() and disttrapcov(), which fit SECR
  models in the specific case where:

    * There are only two traps, both at the same location.

    * Additional information is the estimated or exact distance
      the animal.

    * Each trap is associated with its own halfnormal detection
      function.

  Eventually these specific cases will also be handled by admbsecr().

* Added further methods to contours() function. It now works with
  methods "sstoa", "ang", and "disttc".

* Further cosmetic improvements to contours().

* The admbsecr() function now accepts an argument which fixes
  parameters at a specific value.

admbsecr 0.1.2
--------------

* Added additional method:

    * "mrds" -- SECR with known animal locations. Equivalent to
      mark-recapture distance sampling.

* Added contours() function, which plots estimated animal location
  densities. This currently works with fits from methods "simple",