@@ -8,11 +8,12 @@ make.all.tpl.easy <- function(memory, method, detfn, parnames){
   sstext <- "\nPROCEDURE_SECTION\n  // Setting up variables\n  const double pi=3.14159265359;\n  int i, j;\n  dvariable p, d;\n  dvar_matrix p2(1,ntraps,1,nmask);\n  dvar_matrix logp1(1,ntraps,1,nmask);\n  dvar_matrix logp2(1,ntraps,1,nmask);\n  dvar_vector pm(1,nmask);\n  dvar_vector wi1(1,ntraps);\n  dvar_vector ci1(1,ntraps);\n  dvar_matrix muss(1,ntraps,1,nmask);\n\n  muss = //@LINKFN(ssb0 + ssb1*dist);\n  for (i = 1; i <= nmask; i++){\n    p=1;\n    for (j = 1; j <= ntraps; j++){\n      p2(j,i) = cumd_norm((c - muss(j,i))/sigmass);\n      p *= p2(j,i);\n    }\n    pm(i) = 1 - p + DBL_MIN;\n  }\n  logp2 = log(p2 + DBL_MIN);\n  dvariable L1=0;\n  // Probability of capture histories for each animal.\n  for (i = 1; i <= n; i++){\n    logp1 = 0;\n    wi1 = row(sscapt,i);\n    ci1 = row(capt,i);\n    for(j = 1; j <= ntraps; j++){\n      if (ci1(j) == 1){\n        logp1(j)(1,nmask) = -log(sigmass) - log(sqrt(2*pi)) + (square(wi1(j)-row(muss,j))/(-2*square(sigmass)));\n      }\n    }\n    L1 += log(D*sum(mfexp(ci1*logp1 + (1-ci1)*logp2) + DBL_MIN));\n  }\n  // Putting log-likelihood together.\n  dvariable lambda = A*D*sum(pm);\n  dvariable L2 = -n*log(D*sum(pm));\n  dvariable L3 = log_density_poisson(n,lambda);\n  f = -(L1+L2+L3);\n  if (trace==1){\n    //@TRACE;\n  }\n\nGLOBALS_SECTION\n  #include <float.h>\n\nREPORT_SECTION\n" 
   sstoatext <- "\nPROCEDURE_SECTION\n  // Setting up variables\n  const double pi=3.14159265359;\n  int i, j;\n  dvariable p, d, nzz;\n  dvar_matrix p2(1,ntraps,1,nmask);\n  dvar_matrix logp1(1,ntraps,1,nmask);\n  dvar_matrix logp2(1,ntraps,1,nmask);\n  dvar_vector pm(1,nmask);\n  dvar_vector wi1(1,ntraps);\n  dvar_vector ci1(1,ntraps);\n  dvar_vector toall(1,nmask);\n  dvar_matrix muss(1,ntraps,1,nmask);\n\n  muss = //@LINKFN(ssb0 + ssb1*dist);\n  for (i = 1; i <= nmask; i++){\n    p=1;\n    for (j = 1; j <= ntraps; j++){\n      p2(j,i) = cumd_norm((c - muss(j,i))/sigmass);\n      p *= p2(j,i);\n    }\n    pm(i) = 1 - p + DBL_MIN;\n  }\n  logp2 = log(p2 + DBL_MIN);\n  dvariable L1=0;\n  // Probability of capture histories for each animal.\n  for (i = 1; i <= n; i++){\n    logp1 = 0;\n    wi1 = row(sscapt,i);\n    ci1 = row(capt,i);\n    nzz = sum(ci1);\n    for (j = 1; j <= ntraps; j++){\n      if (ci1(j) == 1){\n        logp1(j)(1,nmask)= -log(sigmass) - log(sqrt(2*pi)) + (square(wi1(j)-row(muss,j))/(-2*square(sigmass)));\n      }\n    }\n    toall = (1 - nzz)*log(sigmatoa) - ((row(toassq,i))/(2*square(sigmatoa)));\n    L1 += log(D*sum(mfexp((ci1*logp1 + (1 - ci1)*logp2) + toall) + DBL_MIN));\n  }\n  // Putting log-likelihood together.\n  dvariable lambda = A*D*sum(pm);\n  dvariable L2 = -n*log(D*sum(pm));\n  dvariable L3 = log_density_poisson(n,lambda);\n  f = -(L1+L2+L3);\n  if (trace==1){\n    //@TRACE;\n  }\n\nGLOBALS_SECTION\n  #include <float.h>\n\nREPORT_SECTION\n" 
   disttext <- "\nPROCEDURE_SECTION\n  // Setting up variables.\n  const double pi=3.14159265359;\n  int i, j;\n  dvariable p, d;\n  dvar_matrix p1(1,ntraps,1,nmask);\n  dvar_matrix p2(1,ntraps,1,nmask);\n  dvar_matrix logp1(1,ntraps,1,nmask);\n  dvar_matrix logp2(1,ntraps,1,nmask);\n  dvar_vector pm(1,nmask);\n  dvar_vector wi1(1,ntraps);\n  dvar_vector distll(1,nmask);\n  dvar_vector beta(1,nmask);\n  // Probability of detection at any trap for each location.\n  for (i = 1; i <= nmask; i++){\n    p = 1;\n    for (j = 1; j <= ntraps; j++){\n      d = dist(j,i);\n      // Flag for detection function insertion.\n      p1(j,i) = //@DETFN;\n      p2(j,i) = 1 - p1(j,i);\n      p *= p2(j,i);\n    }\n    pm(i) = 1 - p + DBL_MIN;\n  }\n  logp1 = log(p1 + DBL_MIN);\n  logp2 = log(p2 + DBL_MIN);\n  dvariable L1 = 0;\n  // Probability of capture histories for each animal.\n  for (i = 1; i <= n; i++){\n    wi1 = row(capt,i);\n    distll = 0;\n    // Likelihood due to distances.\n    for(j = 1; j <= ntraps; j++){\n      // Gamma density contribution for each trap.\n      if(capt(i,j)==1){\n\tbeta = alpha/row(dist,j);\n\tdistll += alpha*log(beta) + (alpha - 1)*log(distcapt(i)(j)) - (beta*distcapt(i)(j)) - gammln(alpha);\n      }\n    }\n    L1 += log(sum(mfexp(log(D) + (wi1*logp1 + (1 - wi1)*logp2) + distll)) + DBL_MIN);\n  }\n  // Putting log-likelihood together.\n  dvariable lambda = A*D*sum(pm);\n  dvariable L2 = -n*log(D*sum(pm));\n  dvariable L3 = log_density_poisson(n,lambda);\n  f = -(L1 + L2 + L3);\n  if (trace == 1){\n    //@TRACE;\n  }\n\nGLOBALS_SECTION\n  #include <float.h>\n\nREPORT_SECTION\n"
-  mrdstext <- "\nPROCEDURE_SECTION\n  // Setting up variables.\n  int i,j;\n  dvariable p, p1, d;\n  dvar_matrix indivp1(1,n,1,ntraps);\n  dvar_matrix indivp2(1,n,1,ntraps);\n  dvar_matrix logindivp1(1,n,1,ntraps);\n  dvar_matrix logindivp2(1,n,1,ntraps);\n  dvar_matrix logprobs(1,n,1,ntraps);\n  dvar_vector pm(1,nmask);\n  dvar_vector wi1(1,ntraps);\n  dvar_vector wi2(1,ntraps);\n  // Probability of detection at any trap for each location.\n  for (i = 1; i <= nmask; i++){\n    p = 1;\n    for(j = 1; j <= ntraps; j++){\n      d = dist(j,i);\n      // Flag for detection function insertion.\n      p1 = //@DETFN;\n      p *= 1 - p1;\n    }\n    pm(i) = 1 - p + DBL_MIN;\n  }\n  // Probability of capture histories for each animal.\n  for (i = 1; i <= n; i++){\n    for (j = 1; j <= ntraps; j++){\n      d = indivdist(i,j);\n      indivp1(i,j) = //@DETFN;\n      indivp2(i,j) = 1 - indivp1(i,j);\n    }\n  }\n  logindivp1 = log(indivp1 + DBL_MIN);\n  logindivp2 = log(indivp2 + DBL_MIN);\n  logprobs = elem_prod(logindivp1,capt) + elem_prod(logindivp2,1 - capt);\n  dvariable L1 = sum(logprobs) + n*log(D);\n  dvariable L2 = -n*log(D*sum(pm));\n  dvariable lambda = A*D*sum(pm);\n  dvariable L3 = log_density_poisson(n,lambda);\n  f = -(L1+L2+L3);\n  if (trace == 1){\n    //@TRACE;\n  }\n\nGLOBALS_SECTION\n  #include <float.h>\n\nREPORT_SECTION\n\n" 
-  alltext <- c(simpletext, toatext, angtext, sstext, sstoatext, disttext, mrdstext)
-  names(alltext) <- c("simple", "toa", "ang", "ss", "sstoa", "dist", "mrds")
+  mrdstext <- "\nPROCEDURE_SECTION\n  // Setting up variables.\n  int i,j;\n  dvariable p, p1, d;\n  dvar_matrix indivp1(1,n,1,ntraps);\n  dvar_matrix indivp2(1,n,1,ntraps);\n  dvar_matrix logindivp1(1,n,1,ntraps);\n  dvar_matrix logindivp2(1,n,1,ntraps);\n  dvar_matrix logprobs(1,n,1,ntraps);\n  dvar_vector pm(1,nmask);\n  dvar_vector wi1(1,ntraps);\n  dvar_vector wi2(1,ntraps);\n  // Probability of detection at any trap for each location.\n  for (i = 1; i <= nmask; i++){\n    p = 1;\n    for(j = 1; j <= ntraps; j++){\n      d = dist(j,i);\n      // Flag for detection function insertion.\n      p1 = //@DETFN;\n      p *= 1 - p1;\n    }\n    pm(i) = 1 - p + DBL_MIN;\n  }\n  // Probability of capture histories for each animal.\n  for (i = 1; i <= n; i++){\n    for (j = 1; j <= ntraps; j++){\n      d = indivdist(i,j);\n      indivp1(i,j) = //@DETFN;\n      indivp2(i,j) = 1 - indivp1(i,j);\n    }\n  }\n  logindivp1 = log(indivp1 + DBL_MIN);\n  logindivp2 = log(indivp2 + DBL_MIN);\n  logprobs = elem_prod(logindivp1,capt) + elem_prod(logindivp2,1 - capt);\n  dvariable L1 = sum(logprobs) + n*log(D);\n  dvariable L2 = -n*log(D*sum(pm));\n  dvariable lambda = A*D*sum(pm);\n  dvariable L3 = log_density_poisson(n,lambda);\n  f = -(L1+L2+L3);\n  if (trace == 1){\n    //@TRACE;\n  }\n\nGLOBALS_SECTION\n  #include <float.h>\n\nREPORT_SECTION\n\n"
+  ssmrdstext <- "\nPROCEDURE_SECTION\n  // Setting up variables.\n  const double pi=3.14159265359;\n  int i, j;\n  dvariable p, d, indivmuss;\n  dvar_vector pm(1,nmask);\n  dvar_matrix p2(1,ntraps,1,nmask);\n  dvar_matrix muss(1,ntraps,1,nmask);\n  muss = //@LINKFN(ssb0 + ssb1*dist);\n  for (i = 1; i <= nmask; i++){\n    p = 1;\n    for(j = 1; j <= ntraps; j++){\n      p2(j,i) = cumd_norm((c - muss(j,i))/sigmass);\n      p *= p2(j,i);\n    }\n    pm(i) = 1 - p + DBL_MIN;\n  }\n  dvariable L1 = 0;\n  // Probability of capture histories for each animal.\n  for (i = 1; i <= n; i++){\n    for (j = 1; j <= ntraps; j++){\n      d = indivdist(i,j);\n      indivmuss = //@LINKFN(ssb0 + ssb1*d);\n      if (capt(i,j) == 0){\n        L1 += log(cumd_norm((c - indivmuss)/sigmass) + DBL_MIN);\n      } else {\n        L1 += -log(sigmass) - log(sqrt(2*pi)) + (square(sscapt(i,j) - indivmuss)/(-2*square(sigmass)));\n      }\n    }\n  }\n  L1 += n*log(D);\n  dvariable L2 = -n*log(D*sum(pm));\n  dvariable lambda = A*D*sum(pm);\n  dvariable L3 = log_density_poisson(n,lambda);\n  f = -(L1+L2+L3);\n  if (trace == 1){\n    //@TRACE;\n  }\n\nGLOBALS_SECTION\n  #include <float.h>\n\n" 
+  alltext <- c(simpletext, toatext, angtext, sstext, sstoatext, disttext, mrdstext, ssmrdstext)
+  names(alltext) <- c("simple", "toa", "ang", "ss", "sstoa", "dist", "mrds", "ssmrds")
   codestring <- alltext[method]
-  if (!(method == "ss" | method == "sstoa")){
+  if (!(method == "ss" | method == "sstoa" | method == "ssmrds")){
     codesplit <- strsplit(codestring, "//@DETFN")[[1]]
     if (detfn == "hn"){
       dfstr <- "g0*mfexp(-square(d)/(2*square(sigma)))"
@@ -68,7 +69,7 @@ make.bessel <- function(){
   cat(besseltext, file = "bessel.cxx")
 }
 
-get.tpl.text <- function(methods = c("simple", "toa", "ang", "ss", "sstoa", "dist", "mrds"),
+get.tpl.text <- function(methods = c("simple", "toa", "ang", "ss", "sstoa", "dist", "mrds", "ssmrds"),
                          admbwd = "~/admbsecr/ADMB/"){
   t <- character(length(methods))
   names(t) <- methods
