@@ -3,6 +3,14 @@ admbsecr 0.1.5
 
 * Added the argument sound.speed to admbsecr().
 
+* Added additional method:
+
+    * "ssmrds" -- SECR with known animal locations and recorded signal
+      strengths. Mostly of academic interest to see the sampling
+      distribution of our estimates when we use all the spatial
+      information we possibly have while fitting a signal strength
+      model.        
+
 admbsecr 0.1.4
 --------------
 
